# VimCalc

./: CMakeLists.txt
src/: main.cpp  ncurses.cpp  ncurses.hpp
src/core/: cell.hpp  cellId.hpp  cellValue.hpp  columnId.hpp  core.hpp  document.hpp  formula.hpp  rowId.hpp  sheet.hpp  sheetDataStorage.cpp  sheetDataStorage.hpp  valueType.hpp
src/core/format/: alignmentFormat.hpp  border.hpp  borderFormat.hpp  color.hpp  colorFormat.hpp  fontFormat.hpp  format.hpp  formatId.hpp  formatRegistry.cpp  formatRegistry.hpp
src/interface/: coreUiControler.hpp  ui.hpp
src/tui/: dimension.hpp  dimention.hpp  ncurses.cpp  ncurses.hpp  position.hpp  renderer.cpp  renderer.hpp  screenView.cpp  screenView.hpp  tui.cpp  tui.hpp  window.cpp  window.hpp  windowManager.cpp  windowManager.hpp
